# template-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py
